k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: omarlashin217/redis-healtcheck:latest
          ports:
            - containerPort: 6379
              name: redis
          livenessProbe:
            exec:
              command: ["/bin/sh", "-c", "/healthchecks/redis.sh"]
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["/bin/sh", "-c", "/healthchecks/redis.sh"]
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: redis-data
      volumes:
        - name: redis-data
          emptyDir: {}
