k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis

spec:
  selector:
    app: redis  
  type: ClusterIP
  ports:
  - name: "redis-service"
    port: 6379
    targetPort: 6379
